--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/sunilbudhathoki01/bookstore-app#readme",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.3",
